[package]
name = "hyperarmor_inspector"
version = "0.1.0"
edition = "2021"

[dependencies]
convert_case = "0.6.0"
csv = "1.3.0"
eframe = "0.28.1"
egui = "0.28.1"
egui_extras = "0.28.1"
egui_plot = "0.28.1"
itertools = "0.13.0"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.5", features = ["blocking"] }
simple_logger = "5.0.0"
strum = { version = "0.26.3", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt"] }
